# Monitor

./: install_qt.sh  monitor  readme.md
display_monitor/: CMakeLists.txt
